kubernetes/tst/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kerst-hanne-2020-tst
  labels:
    app: kerst-hanne-2020-tst
spec:
  type: ClusterIP
  ports:
   - name: http
     port: 80
     targetPort: http
  selector:
    app: kerst-hanne-2020-tst
